--- a/static/signin.css
+++ b/static/signin.css
@@ -40,12 +40,12 @@ background-color: #0056b3; /* Custom color for the primary button */
 
 /* Position the first image on the left side */
 .gif-background {
-  height: 60vh;
-  width: 570px;
-  margin-left: 60px;
+  height: 40vh;
+  width: 470px;
+  margin-left: 40px;
   position: fixed; /* Or 'absolute' if you want it to scroll with the page */
   left: 0; /* Align to the left side */
-  top: 67%; /* Center vertically */
+  top: 58%; /* Center vertically */
   transform: translateY(-50%); /* Adjust to center the image vertically */
    /* Ensure it overlaps the background */
 
@@ -55,8 +55,8 @@ background-color: #0056b3; /* Custom color for the primary button */
 /* Position the second image on the right side */
 .gif-background2 {
   height: 10vh;
-  width: 480px;
-  margin-right: 60px;
+  width: 400px;
+  margin-right: 100px;
   position: fixed; /* Or 'absolute' if you want it to scroll with the page */
   right: 0; /* Align to the right side */
   top: 65%; /* Center vertically */
@@ -64,23 +64,25 @@ background-color: #0056b3; /* Custom color for the primary button */
   box-shadow: inset 0 0 15px 0px red;
   background-color: #dad5b6;
   border-radius: 15px;
-  animation: rotateY 12s ease-in-out alternate-reverse infinite;
+  border: red 2px solid;
+  /* animation: rotateY 12s ease-in-out alternate-reverse infinite; */
   
   /* Ensure it overlaps the background */
 }
 
 .gif-background3 {
   height: 10vh;
-  width: 480px;
-  margin-right: 60px;
+  width: 400px;
+  margin-right: 100px;
   position: fixed; /* Or 'absolute' if you want it to scroll with the page */
   right: 0; /* Align to the right side */
   top: 50%; /* Center vertically */
   transform: translateY(-50%); /* Adjust to center the image vertically */
   box-shadow: inset 0 0 15px 0px rgb(32, 219, 72);
+  border: green 2px solid;
   background-color: #dad5b6;
   border-radius: 15px;
-  animation: rotateY 12s ease-in-out reverse infinite;
+  /* animation: rotateY 12s ease-in-out reverse infinite; */
   /* Ensure it overlaps the background */
 }
 
