--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -10,6 +10,8 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 <style>
   body {
     background: linear-gradient(to right, #33A251, #BB4B3C); /* Start and end colors of the gradient */
@@ -44,11 +46,12 @@
 
 <div class="registration-container">
   <a href="/signin" class="text-secondary"><b>&larr; Login</b></a>
-  <img src="{% static 'Logo1.png' %}" class="mb-4" alt="Portuguese Flag" style="width: 200px; height: 150px;"> <!-- Adjust size as needed -->
+  <img src="{% static 'Cock Logo.png' %}" class="mb-4" alt="Portuguese Flag" style="width: 200px; height: 150px;"> <!-- Adjust size as needed -->
   <h1><b><span class="text-green" style="color:green">Portu</span><span class="text-red" style="color:rgb(202, 41, 41)">Pro</span></b></h1>
-  <p class="text-center">A Portuguese language learning website to help you sharpen and develop your Portuguese. Enter your details to register for an account below.</p>
+  <p class="text-center">A Portuguese language learning website to help you sharpen and develop your Portuguese.<br> 
+    <span style="font-weight: bold;"> Enter your details to register for an account below.</span></p>
   
-  <form action="signup" method="post">
+  <form id="signup-form" method="post">
     {% csrf_token %}
     <!-- <div class="form-group">
         <label for="inputUsername">Username</label>
@@ -147,7 +150,59 @@
         let messageText = "{% for message in messages %}{{ message }}\n{% endfor %}";
         alert(messageText);  // Use a simple alert for demonstration
     }
+
+
 </script>
 {% endif %}
+
+<div class="toast-container position-fixed top-0 end-0 p-3" style="z-index: 11">
+  <div id="errorToast" class="toast align-items-center text-white bg-danger border-0" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="5000">
+    <div class="d-flex">
+      <div class="toast-body">
+        <!-- Error messages will go here -->
+      </div>
+      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+  </div>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script>
+document.getElementById('signup-form').addEventListener('submit', function(e) {
+    e.preventDefault();
+    var formData = new FormData(this);
+
+    fetch('/signup', {
+        method: 'POST',
+        body: formData,
+        headers: {
+            'X-CSRFToken': '{{ csrf_token }}',
+        }
+    }).then(response => response.json())
+    .then(data => {
+        if(data.status === 'error') {
+            const errorToastEl = document.getElementById('errorToast');
+            const errorToastBody = errorToastEl.querySelector('.toast-body');
+            // Check if data.message is an array
+            if (Array.isArray(data.message)) {
+                // It's an array, join the elements and set as innerHTML
+                errorToastBody.innerHTML = data.message.join("<br>");
+            } else {
+                // It's not an array, set as innerHTML directly
+                errorToastBody.innerHTML = data.message;
+            }
+            const errorToast = new bootstrap.Toast(errorToastEl);
+            errorToast.show(); // Show the toast
+        } else {
+            alert(data.message);
+            window.location.href = '/signin'; // Redirect to login or another page on success
+        }
+    }).catch(error => {
+        console.error('Error:', error);
+    });
+});
+
+</script>
 </body>
 </html>
