--- a/templates/mainsite/vocab.html
+++ b/templates/mainsite/vocab.html
@@ -121,55 +121,54 @@
 </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-    <a class="navbar-brand" href="#">
-        <img src="{% static 'Logo1.png' %}" alt="Logo" width="90" height="65" class="d-inline-block align-text-top">
-        <h1><span class="text-green" style="margin-left: 10px;">Portu</span><span class="text-red">Pro</span></h1>
-    </a>
-    
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav mr-auto" id="navbarUL">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+        <a class="navbar-brand" href="#">
+          
+          <img src="{% static 'Logo2.png' %}" alt="Logo" width="90" height="65" class="d-inline-block align-text-top">
+          <h1><span class="text-green" style="margin-left: 10px;">Portu</span><span class="text-red">Pro</span></h1>
+          
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mr-auto" id="navbarUL">
+            <li class="nav-item active">
+              <a class="nav-link nb-item" href="/home">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active-tab nb-item" style="color: rgb(232, 255, 255);" href="/vocab">Vocabulary</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nb-item" style="color: rgb(232, 255, 255);" href="/analytics">Analytics</a>
+        </li>
         <li class="nav-item">
-          <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-            <a class="nav-link active-tab" href="gearth.html">Vocabulary</a>
-        </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="cultureDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Culture
-            </a>
-            <div class="dropdown-menu" aria-labelledby="cultureDropdown">
-              <a class="dropdown-item" href="page1.html">Architecture</a>
-              <a class="dropdown-item" href="page2.html">Festivals</a>
-              <a class="dropdown-item" href="page3.html">Media</a>
-              <!-- More dropdown items -->
-            </div>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="moreDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            More
-          </a>
-          <div class="dropdown-menu" aria-labelledby="cultureDropdown">
-            <a class="dropdown-item" href="page1.html">Diacritics</a>
-            <a class="dropdown-item" href="page2.html">OS Language</a>
-            <a class="dropdown-item" href="page3.html">Music & More</a>
-            <!-- More dropdown items -->
-          </div>
-        <li class="nav-item">
-          <a class="nav-link" href="gearth.html">Settings</a>
+          <a class="nav-link nb-item" style="color: rgb(232, 255, 255);" href="/diacritics">Diacritics</a>
       </li>
-
-        <!-- More nav items -->
-      </ul>
-      <span class="navbar-text">
-        <a href="/signout" class="settings-link nb-item" style="font-size:22px">Logout</a>
-      </span>
-    </div>
-  </nav>
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle nb-item" style="color: rgb(232, 255, 255);"  href="#" id="cultureDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Culture
+              </a>
+              <div class="dropdown-menu" aria-labelledby="cultureDropdown">
+                <a class="dropdown-item" href="/architecture">Architecture</a>
+                <a class="dropdown-item" href="/festivals">Festivals</a>
+                <a class="dropdown-item" href="page3.html">Media</a>
+                <!-- More dropdown items -->
+              </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" style="color: rgb(232, 255, 255);" href="/settings">Settings</a>
+        </li>
+            <!-- More nav items -->
+          </ul>
+          <span class="navbar-text">
+            <a href="#" id='discordHref' class="settings-link nb-item"  class="settings-link nb-item" style="font-size:26px; margin-right: 2em;" data-toggle="modal" data-target="#discordModal">
+              <i id="discordLogo" class="fab fa-discord"></i>
+          </a>
+            <a href="/signout" class="settings-link nb-item" style="font-size:22px">Logout</a>
+          </span>
+        </div>
+      </nav>
 
   <div class="container mt-3">
     <h1 class="mb-4 heading">Vocabulary</h1>
